1999-07-02  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* NEWS: Note that EZBin's -setBinNum: and Histogram's -setNumBins:
	are now named -setBinCount:.

1999-07-01  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* NEWS: Note support for alphaev56-dec-osf4.0d.

1999-06-30  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* NEWS: Note support for compound HDF5 serialization of
	Discrete2d, tclobjc dynamic callout rewrite, shared library
	constructor workarounds, DefClass and MessageProbe memory
	corruption bug fixes, Arguments ${prefix} expansions,
	+create:withName: -> +create:setName: rename,
	+create:setA:setv:setw: -> +create:setA:setV:setW: rename,
	improved abort handling, new -setCompare* Map methods, and
	initSwarm macros.

1999-06-29  Alex Lancaster  <alex@santafe.edu>

	* NEWS: Note ListShuffler bug fix.  Note split of Archiver into
	LispArchiver and HDF5Archiver.

1999-06-19  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* ltconfig: Don't use +I for hpux9.  Use hpux9 code for hpux10,
	since there isn't a preprocessor symbol for hpux10.
	(We'll call the constructors manually.)
	For constructor name, remove everything after first "." -- this
	avoids the version number, which is a pain if encoded into source
	code calls. 

1999-06-18  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* VERSION: Bump.

1999-06-15  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (EXTRA_DIST): Remove avcall.
	(SUBDIRS): Set using automake conditional, not substitution.

1999-06-10  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* configure.in: Use AM_CONFIG_HEADER instead of AC_OUTPUT
	entry for externvar.h.in.  This prevents header file touch
	dates from changing. 

	* externvar.h.in: Don't do undef with disable_externvar, just
	avoid definitions.  undef isn't ignored when AM_CONFIG_HEADER
	is used.

	* ltmain.sh: In the case of static linking, add container library
	after component libraries, in case the container has required
	symbols for the components.
